<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="20dp">

    <TextView
        android:id="@+id/info_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_noData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"

        android:textAppearance="@style/TextAppearance.AppCompat.Display2"/>

    <ImageView
        android:id="@+id/info_image"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/info_description"
        app:layout_constraintTop_toBottomOf="@id/info_title"
        android:scaleType="centerCrop"

        android:layout_marginEnd="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/tv_noData"
        app:layout_constraintStart_toEndOf="@id/info_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_title"

        android:minHeight="150dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_tvComposition"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tvComposition"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_image"

        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_tvBiscuit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_noData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_tvComposition"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_tvCream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_noData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_tvBiscuit"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_tvFilling"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_noData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_tvCream"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_tvPriceLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_tvPriceLabel_noData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_tvFilling"

        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:layout_marginTop="20dp"/>

    <TextView
        android:id="@+id/info_tvPrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_noData"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/info_tvPriceLabel"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/info_bBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bBack"
        app:layout_constraintTop_toBottomOf="@id/info_tvPrice"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="20dp"/>

    <Button
        android:id="@+id/info_bOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/bMakeOrder"
        app:layout_constraintTop_toBottomOf="@id/info_tvPrice"
        app:layout_constraintStart_toEndOf="@id/info_bBack"

        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"/>



</androidx.constraintlayout.widget.ConstraintLayout>